[gd_scene load_steps=4 format=3 uid="uid://f2n7k025ony"]

[ext_resource type="Script" uid="uid://d1j6iyris0eu8" path="res://data/hud/hud.gd" id="1_jgt0n"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="2_pliyr"]

[sub_resource type="LabelSettings" id="LabelSettings_8icnw"]
font_size = 48
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 0)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jgt0n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CoinsInfoLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 71.0
offset_bottom = 83.0
text = "0$"
label_settings = SubResource("LabelSettings_8icnw")

[node name="Virtual Joystick" parent="." instance=ExtResource("2_pliyr")]
anchors_preset = 3
anchor_left = 1.0
anchor_right = 1.0
offset_left = -168.0
offset_top = -168.0
offset_right = 132.0
offset_bottom = 132.0
grow_horizontal = 0
scale = Vector2(0.5, 0.5)
clampzone_size = 45.0
action_left = "move_left"
action_right = "move_right"
action_up = "move_up"
action_down = "move_down"

[node name="PauseButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -79.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 55.0
grow_horizontal = 0
text = "Pause"

[node name="DashButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -89.0
offset_right = 145.0
offset_bottom = -23.0
grow_vertical = 0
text = "DASH"

[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="button_down" from="DashButton" to="." method="_on_dash_button_button_down"]
[connection signal="button_up" from="DashButton" to="." method="_on_dash_button_button_up"]
